--- a/windows_playbooks/enableremotedesktop.yml
+++ b/windows_playbooks/enableremotedesktop.yml
@@ -1,13 +1,6 @@
 ---
-- vars_prompt:
-    - name: "host"
-      prompt: "Which Host"
-      private: no
-  hosts: "{{ host }}"
+- hosts: winservers
   gather_facts: false
-  vars_files:
-    - /etc/ansible/vault/vault.yml
-    - /etc/ansible/group_vars/windows.yml
   tasks:
   - name: Enable Remote Desktop
     win_shell:
