--- a/windows_playbooks/updatescheck.yml
+++ b/windows_playbooks/updatescheck.yml
@@ -1,13 +1,6 @@
 ---
-- vars_prompt:
-    - name: "host"
-      prompt: "Which Host"
-      private: no
-  hosts: "{{ host }}"
+- hosts: "{{ host }}"
   gather_facts: false
-  vars_files:
-    - /etc/ansible/vault/vault.yml
-    - /etc/ansible/group_vars/windows.yml
   tasks:
   - name: Check for missing updates
     win_updates:
