--- a/windows_playbooks/disableieesc.yml
+++ b/windows_playbooks/disableieesc.yml
@@ -1,15 +1,8 @@
 ---
-- vars_prompt:
-    - name: "host"
-      prompt: "Which Host"
-      private: no
-  hosts: "{{ host }}"
+- hosts: "{{ host }}"
   gather_facts: false
-  vars_files:
-    - /etc/ansible/vault/vault.yml
-    - /etc/ansible/group_vars/windows.yml
   tasks:
-  - name: Enable Remote Desktop
+  - name: Disable-IEESC
     win_shell: |
       function Disable-IEESC
       {
