--- a/windows_playbooks/win_wsus_cleanup.yml
+++ b/windows_playbooks/win_wsus_cleanup.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: hyperv.DOWNS.LAN
-  gather_facts: true
+  gather_facts: false
   tasks:
   - name: Enable Remote Desktop
     win_shell:
