--- a/windows_playbooks/win_wsus_cleanup.yml
+++ b/windows_playbooks/win_wsus_cleanup.yml
@@ -2,7 +2,7 @@
 - hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
-  - name: Enable Remote Desktop
+  - name: Cleanup WSUS
     win_shell:
        'Invoke-WsusServerCleanup -CleanupObsoleteComputers -CleanupObsoleteUpdates -CleanupUnneededContentFiles -DeclineExpiredUpdates -DeclineSupersededUpdates'
     register: find_output
