Update and rename uptime.yml to win_uptime.yml

--- a/windows_playbooks/win_uptime.yml
+++ b/windows_playbooks/win_uptime.yml
@@ -8,3 +8,4 @@
     - name: List Uptime
       debug:
         var: shell_result.stdout_lines
+      when: ansible_distribution == 'windows2019srv_64Guest'
