--- a/windows_playbooks/win_uptime.yml
+++ b/windows_playbooks/win_uptime.yml
@@ -8,4 +8,4 @@
     - name: List Uptime
       debug:
         var: shell_result.stdout_lines
-      when: ansible_distribution == 'windows2019srv_64Guest'
+      when: guestId == 'windows9Server64Guest'
