--- a/windows_playbooks/win_uptime.yml
+++ b/windows_playbooks/win_uptime.yml
@@ -4,7 +4,8 @@
   tasks:
     - name: Get Uptime
       win_shell: (get-date) - (gcim Win32_OperatingSystem).LastBootUpTime
-      when: ansible_distribution == 'Microsoft Windows Server 2019 Datacenter'
+      when: 
+        ansible_distribution == 'Microsoft Windows Server 2019 Datacenter'
       register: shell_result
       
     - name: List Uptime
