--- a/windows_playbooks/win_ping.yml
+++ b/windows_playbooks/win_ping.yml
@@ -1,6 +1,10 @@
 ---
-- hosts: "{{ HOST }}"
-  gather_facts: false
+---
+- hosts: "{{ ansible_play_batch }}"
+  gather_facts: true
   tasks:
   - name: winping
     win_ping:
+    when: 
+      ansible_facts['ansible_distribution'] == "Microsoft Windows Server 2019 Datacenter"
+ 
