--- a/windows_playbooks/win_ping.yml
+++ b/windows_playbooks/win_ping.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: "{{ ansible_play_batch }}"
   gather_facts: true
+  vars:
+    ansible_distribution: Microsoft Windows Server 2019 Datacenter
   tasks:
   - name: winping
     win_ping:
