--- a/windows_playbooks/win_ping.yml
+++ b/windows_playbooks/win_ping.yml
@@ -6,5 +6,4 @@
   tasks:
   - name: winping
     win_ping:
-    when: 
-      ansible_facts['ansible_distribution'] == "Microsoft Windows Server 2019 Datacenter"
+    when: ansible_os_family == "Windows"
