--- a/windows_playbooks/fwrdp.yml
+++ b/windows_playbooks/fwrdp.yml
@@ -1,13 +1,6 @@
 ---
-- vars_prompt:
-    - name: "host"
-      prompt: "Which Host"
-      private: no
-  hosts: "{{ host }}"
+
   gather_facts: false
-  vars_files:
-    - /etc/ansible/vault/vault.yml
-    - /etc/ansible/group_vars/windows.yml
   tasks:
   - name: Firewall rule to allow RDP on TCP port 3389
     win_firewall_rule:
@@ -19,3 +12,4 @@
       profiles: domain
       state: present
       enabled: yes
+      when: guest.guestFamily == "windowsGuest"
