--- a/windows_playbooks/win_install_wsus.yml
+++ b/windows_playbooks/win_install_wsus.yml
@@ -2,6 +2,6 @@
 - hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
-  - name: WSUS Checkin
+  - name: WSUS Install
     win_shell:
       Install-WindowsFeature -Name UpdateServices, UpdateServices-WidDB, UpdateServices-Services, UpdateServices-RSAT, UpdateServices-API, UpdateServices-UI
