--- a/windows_playbooks/win_install_wsus.yml
+++ b/windows_playbooks/win_install_wsus.yml
@@ -5,3 +5,7 @@
   - name: WSUS Install
     win_shell:
       Install-WindowsFeature -Name UpdateServices, UpdateServices-WidDB, UpdateServices-Services, UpdateServices-RSAT, UpdateServices-API, UpdateServices-UI
+  - name: Create Updates Directory
+    win_file:
+      path: c:\updates
+      state: directory
