--- a/windows_playbooks/win_updates_check.yml
+++ b/windows_playbooks/win_updates_check.yml
@@ -10,6 +10,7 @@
         - DefinitionUpdates
       state: searched
     register: kb
+    when: guest.guestFamily == "windowsGuest"
   - name: List missing updates
     debug:
       var: kb.updates
