--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -14,6 +14,7 @@
       - Drivers
       - Tools
       state: installed
+    when: guest.guestFamily == "windowsGuest"
     register: update_result
   - name: reboot host if required
     win_reboot:
