--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -19,3 +19,4 @@
   - name: reboot host if required
     win_reboot:
     when: update_result.reboot_required
+    when: guest.guestFamily == "windowsGuest"
