--- a/windows_playbooks/win_wsus_approve_prod.yml
+++ b/windows_playbooks/win_wsus_approve_prod.yml
@@ -2,6 +2,6 @@
 - hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
-  - name: Cleanup WSUS
+  - name: Approve PROD Updates
     win_shell:
        Get-WsusUpdate -Classification All -Approval Approved -Status Needed | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
