--- a/windows_playbooks/win_wsus_approve_prod.yml
+++ b/windows_playbooks/win_wsus_approve_prod.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: "{{ ansible_play_batch }}"
-  gather_facts: true
+  gather_facts: false
   tasks:
   - name: Approve PROD Updates
     win_shell:
