--- a/windows_playbooks/win_wsus_checkin.yml
+++ b/windows_playbooks/win_wsus_checkin.yml
@@ -5,6 +5,9 @@
   - name: WSUS Checkin
     win_shell:
       $updateSession = new-object -com "Microsoft.Update.Session"; $updates=$updateSession.CreateupdateSearcher().Search($criteria).Updates
+  - name: Wait 15 Sec
+    win_shell:
+      Start-Sleep 15
   - name: Trigger Poll
     win_shell:
       wuauclt /reportnow
