--- a/windows_playbooks/win_wsus_checkin.yml
+++ b/windows_playbooks/win_wsus_checkin.yml
@@ -9,6 +9,7 @@
   - name: Wait 15 Sec
     win_shell:
       Start-Sleep 15
+    when: guest.guestFamily == "windowsGuest"
   - name: Trigger Poll
     win_shell:
       wuauclt /reportnow
