--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -16,7 +16,7 @@
       state: installed
     when: guest.guestFamily == "windowsGuest"
     register: update_result
-  - name: reboot host if required
-    win_reboot:
-    when: update_result.reboot_required
-    when: guest.guestFamily == "windowsGuest"
+      
+  - name: Show Reboot
+    debug:
+      var: update_result.stdout_lines
