--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -14,5 +14,6 @@
       - Drivers
       - Tools
       state: installed
+      reboot: no
     when: guest.guestFamily == "windowsGuest"
     register: reboot_required
