--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -16,4 +16,8 @@
       state: installed
       reboot: no
     when: guest.guestFamily == "windowsGuest"
-    register: reboot_required
+    register: update_results
+  - name: Report Results
+    debug:
+      msg: {{ reboot_required }}
+    when: guest.guestFamily == "windowsGuest"
