--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -19,5 +19,5 @@
     register: update_results
   - name: Report Results
     debug:
-      msg: {{ reboot_required }}
+      msg: {{ update_results.reboot_required }}
     when: guest.guestFamily == "windowsGuest"
