--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -19,8 +19,6 @@
     register: update_results
   - name: Report Results
     debug:
-      msg: |
-        {% for false in update_results.reboot_required %}
-        {{ update_results.reboot_required[false] }}
-        {% endfor %}
+      msg: '{{ item }}'
+    loop: "{{ update_results.reboot_required|json_query('*.title[]') }}"
     when: guest.guestFamily == "windowsGuest"
