--- a/windows_playbooks/win_wsus_approve_prod.yml
+++ b/windows_playbooks/win_wsus_approve_prod.yml
@@ -2,6 +2,13 @@
 - hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
-  - name: Approve PROD Updates
+  - name: Approve Critical Updates
     win_shell:
-       Get-WsusUpdate -Classification "Security,Updates" -Approval AnyExceptDeclined | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
+       Get-WsusUpdate -Classification Critical -Approval AnyExceptDeclined | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
+    when: update_critical == 'yes' or both_var == 'yes'
+
+  - name: Approve Critical Updates
+    win_shell:
+       Get-WsusUpdate -Classification Security -Approval AnyExceptDeclined | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
+    when: update_security == 'yes' or both_var == 'yes'
+    
