--- a/windows_playbooks/win_wsus_approve_prod.yml
+++ b/windows_playbooks/win_wsus_approve_prod.yml
@@ -2,6 +2,14 @@
 - hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
+  - name: check needed for critical
+    win_shell:  Get-WsusUpdate -Classification Critical -Approval AnyExceptDeclined
+    register: critical_count
+    
+  - name: check needed for security
+    win_shell:  Get-WsusUpdate -Classification Security -Approval AnyExceptDeclined
+    register: security_count
+  
   - name: Approve Critical Updates
     win_shell:
        Get-WsusUpdate -Classification Critical -Approval AnyExceptDeclined | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
@@ -11,4 +19,3 @@
     win_shell:
        Get-WsusUpdate -Classification Security -Approval AnyExceptDeclined | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
     when: update_security == 'yes' or both_var == 'yes'
-    
