--- a/windows_playbooks/win_wsus_checkin.yml
+++ b/windows_playbooks/win_wsus_checkin.yml
@@ -3,7 +3,7 @@
   gather_facts: false
   tasks:
   - name: Checkin
-    ansible.windows.win_updates:
+    win_updates:
       category_names: 
         - SecurityUpdates
         - CriticalUpdates
