--- a/windows_playbooks/win_updates_check.yml
+++ b/windows_playbooks/win_updates_check.yml
@@ -11,3 +11,6 @@
       state: searched
     register: kb
     when: guest.guestFamily == "windowsGuest"
+  - name: OutputCount
+    debug:
+      kb.found_update_count
