--- a/windows_playbooks/win_updates_check.yml
+++ b/windows_playbooks/win_updates_check.yml
@@ -13,4 +13,4 @@
     when: guest.guestFamily == "windowsGuest"
   - name: OutputCount
     debug:
-      kb.found_update_count
+      var: kb.found_update_count
