--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -17,3 +17,4 @@
   - name: show what updates were installed
     debug:
       var: update_results.installed_update_count
+    when: guest.guestFamily == "windowsGuest"
