--- a/windows_playbooks/win_updates_check.yml
+++ b/windows_playbooks/win_updates_check.yml
@@ -14,5 +14,5 @@
   - name: OutputCount
     debug:
       # var: kb.found_update_count 
-      var: kb.found_update.updates
+      var: kb.updates
     when: guest.guestFamily == "windowsGuest"
