--- a/windows_playbooks/win_updates_check.yml
+++ b/windows_playbooks/win_updates_check.yml
@@ -13,5 +13,5 @@
     when: guest.guestFamily == "windowsGuest"
   - name: OutputCount
     debug:
-      var: {{ kb.found_update_count }} {{ kb.updates }}
+      msg: {{ kb.found_update_count }} {{ kb.updates }}
     when: guest.guestFamily == "windowsGuest"
