--- a/windows_playbooks/win_updates_check.yml
+++ b/windows_playbooks/win_updates_check.yml
@@ -13,5 +13,9 @@
     when: guest.guestFamily == "windowsGuest"
   - name: OutputCount
     debug:
-      msg: {{ kb.found_update_count }} {{ kb.updates }}
+      var: kb.found_update_count
+    when: guest.guestFamily == "windowsGuest"
+  - name: OutputUpdate
+    debug:
+      var: kb.updates
     when: guest.guestFamily == "windowsGuest"
