--- a/windows_playbooks/win_wsus_approve.yml
+++ b/windows_playbooks/win_wsus_approve.yml
@@ -4,10 +4,10 @@
   tasks:
   - name: Approve Critical Updates
     win_shell:
-       Get-WsusUpdate -Classification critical -Approval Unapproved -Status Needed | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
+       Get-WsusUpdate -Classification critical -Approval AnyExceptDeclined -Status Needed | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
     when: update_critical == 'yes' or both_var == 'yes'
 
   - name: Approve Security Updates
     win_shell:
-       Get-WsusUpdate -Classification security -Approval Unapproved -Status Needed | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
+       Get-WsusUpdate -Classification security -Approval AnyExceptDeclined -Status Needed | Approve-WsusUpdate -Action Install -TargetGroupName "{{ approved_group }}"
     when: update_security == 'yes' or both_var == 'yes'
