--- a/windows_playbooks/wsus_updates.yml
+++ b/windows_playbooks/wsus_updates.yml
@@ -6,10 +6,13 @@
   - name: Check Critical Updates
     win_shell:
        Get-WsusUpdate -Classification critical -Approval AnyExceptDeclined -Status Needed
+  - name: Critical Updates Needed Approved
+    debug:
+      var: updates.stdout_lines
   - name: Check Security Updates
     win_shell:
        Get-WsusUpdate -Classification security -Approval AnyExceptDeclined -Status Needed
     register: updates
-  - name: Output Updates Needed Approved
+  - name: Security Updates Needed Approved
     debug:
       var: updates.stdout_lines
