--- a/windows_playbooks/wsus_updates.yml
+++ b/windows_playbooks/wsus_updates.yml
@@ -5,13 +5,13 @@
   tasks:
   - name: Check Critical Updates
     win_shell:
-       Get-WsusUpdate -Classification critical -Approval AnyExceptDeclined -Status Needed
+       Get-WsusUpdate -Classification critical -Approval Unapproved -Status Needed
   - name: Critical Updates Needed Approved
     debug:
       var: updates.stdout_lines
   - name: Check Security Updates
     win_shell:
-       Get-WsusUpdate -Classification security -Approval AnyExceptDeclined -Status Needed
+       Get-WsusUpdate -Classification security -Approval Unapproved -Status Needed
     register: updates
   - name: Security Updates Needed Approved
     debug:
