--- a/windows_playbooks/wsus_updates_needing_approval.yml
+++ b/windows_playbooks/wsus_updates_needing_approval.yml
@@ -6,7 +6,7 @@
   - name: Check Critical Updates
     win_shell:
        Get-WsusUpdate -Classification critical -Approval Unapproved -Status Needed
-    register: udpates
+    register: updates
   - name: Critical Updates Needed Approved
     debug:
       var: updates.stdout_lines
