--- a/windows_playbooks/win_updates_check.yml
+++ b/windows_playbooks/win_updates_check.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: "{{ ansible_play_batch }}"
+- name: Checks clients for needed updates
+  hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
   - name: Check for missing updates
