--- a/windows_playbooks/win_wsus_remove_superseded.yml
+++ b/windows_playbooks/win_wsus_remove_superseded.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: "{{ ansible_play_batch }}"
+- name: Removes superseded updates from WSUS server
+  hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
   - name: Cleanup WSUS
