--- a/windows_playbooks/win_wsus_cleanup.yml
+++ b/windows_playbooks/win_wsus_cleanup.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: "{{ ansible_play_batch }}"
+- name: Forces WSUS database cleanup
+  hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
   - name: Cleanup WSUS
