--- a/windows_playbooks/win_wsus_approve_updates.yml
+++ b/windows_playbooks/win_wsus_approve_updates.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: "{{ ansible_play_batch }}"
+- name: approves updates and applies them to specified groups
+  hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
   - name: Approve Critical Updates
