--- a/windows_playbooks/win_uptime.yml
+++ b/windows_playbooks/win_uptime.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: "{{ ansible_play_batch }}"
+- name: Gives uptime report of server
+  hosts: "{{ ansible_play_batch }}"
   gather_facts: true
   tasks:
     - name: Get Uptime
@@ -9,4 +10,3 @@
     - name: List Uptime
       debug:
         var: shell_result.stdout_lines
-      
