--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: "{{ ansible_play_batch }}"
+- name: Install all updates to servers
+  hosts: "{{ ansible_play_batch }}"
   gather_facts: false
   tasks:
   - name: Install All Updates
