--- a/windows_playbooks/win_uptime.yml
+++ b/windows_playbooks/win_uptime.yml
@@ -1,7 +1,7 @@
 ---
 - name: Gives uptime report of server
   hosts: "{{ ansible_play_batch }}"
-  gather_facts: true
+  gather_facts: false
   tasks:
     - name: Get Uptime
       win_shell: (get-date) - (gcim Win32_OperatingSystem).LastBootUpTime
