--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,4 +1,3 @@
 ---
-collections:
-https://github.com/edtechjeff/towerplaybooks.git
-type: git
+src: https://github.com/edtechjeff/towerplaybooks.git
+scm: git
