--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,2 +1,3 @@
 ---
-- src: https://github.com/edtechjeff/disable-ieesc
+# - src: https://github.com/edtechjeff/disable-ieesc
+- src: https://github.com/edtechjeff/towerplaybooks
