--- a/azureplaybooks/collections/requirements.yml
+++ b/azureplaybooks/collections/requirements.yml
@@ -1,4 +1,4 @@
 ---
 collections:
   - name: azure.azcollection
-    source: https://galaxy.ansible.com
+    source: https://cloud.redhat.com/api/automation-hub/
