--- a/windows_playbooks/updatesinstall1kb.yml
+++ b/windows_playbooks/updatesinstall1kb.yml
@@ -1,17 +1,9 @@
 ---
-- vars_prompt:
-    - name: "update"
-      prompt: "Which Update"
-      private: no
-    - name: "hosts"
-      prompt: "Which Hosts"
-      private: no
-  hosts: "{{ hosts }}"
+- name: to check WSUS server if patches are waiting to be approved
+  hosts: "{{ host }}"
   gather_facts: false
-  vars_files:
-    - /etc/ansible/vault/vault.yml
-    - /etc/ansible/group_vars/windows.yml
   tasks:
+  - name: 
   - name: Install KB
     win_updates:
       category_names:
