--- a/vmware_playbooks/clustercheck.yml
+++ b/vmware_playbooks/clustercheck.yml
@@ -4,8 +4,10 @@
   gather_facts: false
   tasks:
   - name: Build a list of all the clusters
-    vmware.vmware_rest.vcenter_cluster_info:
+    vmware.vmware_rest.vcenter_vm_info:
+    register: existing_vms
+    until: existing_vms is not failed
       vcenter_hostname: vcsa.DOWNS.LAN
       vcenter_password: LOvemywife%1
       vcenter_username: administrator@vsphere.local
-    register: all_the_clusters
+  
