--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -2,3 +2,5 @@
 collections:
   - name: vmware.vmware_rest
     source: https://cloud.redhat.com/api/automation-hub/
+  - name: cisco.ios
+    source: https://cloud.redhat.com/api/automation-hub/
