--- a/windows_playbooks/roles/win_update_check/tasks/main.yml
+++ b/windows_playbooks/roles/win_update_check/tasks/main.yml
@@ -6,5 +6,5 @@
 - name: deploy report 
   template: 
     src: report.j2
-    dest: /var/tmp/report
+    dest: /var/tmp/report.txt
   delegate_to: 127.0.0.1
