--- a/windows_playbooks/wsus_updates_needing_approval.yml
+++ b/windows_playbooks/wsus_updates_needing_approval.yml
@@ -5,15 +5,21 @@
   tasks:
   - name: Check Critical Updates
     win_shell:
-       Get-WsusUpdate -Classification critical -Approval Unapproved -Status Needed
+       Get-WsusUpdate -Classification critical -Approval AnyExceptDeclined -Status Needed
     register: updates
   - name: Critical Updates Needed Approved
     debug:
       var: updates.stdout_lines
   - name: Check Security Updates
     win_shell:
-       Get-WsusUpdate -Classification security -Approval Unapproved -Status Needed
+       Get-WsusUpdate -Classification security -Approval AnyExceptDeclined -Status Needed
     register: updates
   - name: Security Updates Needed Approved
+    debug:
+      var: updates.stdout_lines
+   win_shell:
+       Get-WsusUpdate -Classification All -Approval AnyExceptDeclined -Status Needed
+    register: updates
+  - name: All Updates Needed Approved
     debug:
       var: updates.stdout_lines
