--- a/windows_playbooks/wsus_updates_needing_approval.yml
+++ b/windows_playbooks/wsus_updates_needing_approval.yml
@@ -17,6 +17,7 @@
   - name: Security Updates Needed Approved
     debug:
       var: updates.stdout_lines
+  - name: Checking for all Updates Needed
    win_shell:
        Get-WsusUpdate -Classification All -Approval AnyExceptDeclined -Status Needed
     register: updates
