--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -4,5 +4,6 @@
   gather_facts: false
   tasks:
   - name: Check Critical Updates
-    win_shell: wusa /uninstall /kb:"{{ kb_number }}" /quiet /norestart
+    win_shell: 
+      wusa /uninstall /kb:"{{ kb_number }}" /quiet /norestart
     when: guest.guestFamily == "windowsGuest"
