--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -4,4 +4,4 @@
   gather_facts: false
   tasks:
   - name: Uninstall hotfix with KB
-    win_shell: usa.exe /quiet /uninstall /kb:4577667 /norestart
+    win_shell: wusa.exe /quiet /uninstall /kb:4577667 /norestart
