--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -4,4 +4,7 @@
   gather_facts: false
   tasks:
   - name: Uninstall hotfix with KB
-    win_shell: wusa.exe /quiet /uninstall /kb:4577667 /norestart
+    win_hotfix:
+    hotfix_identifier: Package_for_KB4494174~31bf3856ad364e35~amd64~~10.0.3.1
+    state: absent
+  register: hotfix_uninstall
