--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -4,7 +4,4 @@
   gather_facts: false
   tasks:
   - name: Uninstall hotfix with KB
-    win_hotfix:
-      hotfix_identifier: Package_for_KB4494174~31bf3856ad364e35~amd64~~10.0.3.1
-      state: absent
-    register: hotfix_uninstall
+    win_shell: wusa /uninstall /kb:4577667 /quiet /norestart /log:c:\uninstall.log
