--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -4,4 +4,5 @@
   gather_facts: false
   tasks:
   - name: Uninstall hotfix with KB
-    win_shell: wusa /uninstall /kb:4577668 /quiet /norestart /log:c:\uninstall.log
+    win_shell: |
+    Get-WindowsPackage -Online | ?{$_.ReleaseType -like "*Update*"} | %{Get-WindowsPackage -Online -PackageName $_.PackageName} | ?{$_.Description -like "{{ kb_number }}"} | Remove-WindowsPackage -Online -NoRestart
