--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -5,4 +5,8 @@
   tasks:
   - name: Uninstall hotfix with KB
     win_shell: |
-    Get-WindowsPackage -Online | ?{$_.ReleaseType -like "*Update*"} | %{Get-WindowsPackage -Online -PackageName $_.PackageName} | ?{$_.Description -like "{{ kb_number }}"} | Remove-WindowsPackage -Online -NoRestart
+    Get-WindowsPackage -Online | ' 
+    ?{$_.ReleaseType -like "*Update*"} | '
+    %{Get-WindowsPackage -Online -PackageName $_.PackageName} | '
+    ?{$_.Description -like "{{ kb_number }}"} | '
+    Remove-WindowsPackage -Online -NoRestart
