--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -6,4 +6,6 @@
   - name: Uninstall hotfix with KB
     win_shell: |
     $sb = Get-WindowsPackage -Online | ?{$_.ReleaseType -like "*Update*"} | %{Get-WindowsPackage -Online -PackageName $_.PackageName} | ?{$_.Description -like "*KB4577668*"} | Remove-WindowsPackage -Online -NoRestart
-    invoke-command -scriptblock { $sb }
+    invoke-command -Scriptblock { 
+    $sb 
+    }
