--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -5,6 +5,6 @@
   tasks:
   - name: Uninstall hotfix with KB
     win_shell: |
-    invoke-command -ScriptBlocck {
+    invoke-command -ScriptBlock {
     Get-WindowsPackage -Online | ?{$_.ReleaseType -like "*Update*"} | %{Get-WindowsPackage -Online -PackageName $_.PackageName} | ?{$_.Description -like "*KB4577668*"} | Remove-WindowsPackage -Online -NoRestart 
     }
