--- a/windows_playbooks/uninstallkb.yml
+++ b/windows_playbooks/uninstallkb.yml
@@ -4,7 +4,4 @@
   gather_facts: false
   tasks:
   - name: Uninstall hotfix with KB
-    win_shell: |
-    invoke-command -ScriptBlock {
-    Get-WindowsPackage -Online | ?{$_.ReleaseType -like "*Update*"} | %{Get-WindowsPackage -Online -PackageName $_.PackageName} | ?{$_.Description -like "*KB4577668*"} | Remove-WindowsPackage -Online -NoRestart 
-    }
+    win_shell: 'Get-WindowsPackage -Online | ?{$_.ReleaseType -like "*Update*"} | %{Get-WindowsPackage -Online -PackageName $_.PackageName} | ?{$_.Description -like "*KB4577668*"} | Remove-WindowsPackage -Online -NoRestart'
