--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -13,9 +13,9 @@
       - WindowsDefender
       state: installed
       reboot: no
-    when: guest.guestFamily == "windowsGuest"
+    when: ansible_os_family == "Windows"
     register: update_results
   - name: show what updates were installed
     debug:
       var: update_results.installed_update_count
-    when: guest.guestFamily == "windowsGuest"
+    when: ansible_os_family == "Windows"
