--- a/windows_playbooks/win_updates_install_all.yml
+++ b/windows_playbooks/win_updates_install_all.yml
@@ -1,6 +1,6 @@
 ---
 - name: Checkin and Install all Updates to Servers
-  hosts: "{{ ansible_play_batch }}"
+  hosts: "{{ host }}"
   gather_facts: false
   roles:
     - client_checkin
